fix: way to get jarFile from jarURL
use .getJarFileURL().toURI() instead of getJarFileURL().getFile()

Signed-off-by: Hiroshi Miura <miurahr@linux.com>